infra/k8s/admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: porter-admin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: porter-admin
  template:
    metadata:
      labels:
        app: porter-admin
    spec:
      containers:
        - name: admin
          image: porter/admin:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: porter-admin
spec:
  selector:
    app: porter-admin
  ports:
    - name: http
      port: 3000
      targetPort: 3000
